Integrate into Detekt project
- Cleanup: Adhere to Detekt's own detekt rules
- Add to default-detekt-config.yml
- Update (auto-generated) potential-bugs.md

--- a/detekt-cli/src/main/resources/default-detekt-config.yml
+++ b/detekt-cli/src/main/resources/default-detekt-config.yml
@@ -397,6 +397,8 @@ potential-bugs:
     active: true
   HasPlatformType:
     active: false
+  HasUnsafePlatformTypeAssignment:
+    active: false
   ImplicitDefaultLocale:
     active: false
   InvalidRange:
